--- a/output.css
+++ b/output.css
@@ -536,6 +536,9 @@
   .mx-2 {
     margin-inline: calc(var(--spacing) * 2);
   }
+  .mx-10 {
+    margin-inline: calc(var(--spacing) * 10);
+  }
   .my-5 {
     margin-block: calc(var(--spacing) * 5);
   }
@@ -613,6 +616,12 @@
   }
   .grid-rows-3 {
     grid-template-rows: repeat(3, minmax(0, 1fr));
+  }
+  .grid-rows-4 {
+    grid-template-rows: repeat(4, minmax(0, 1fr));
+  }
+  .grid-rows-5 {
+    grid-template-rows: repeat(5, minmax(0, 1fr));
   }
   .flex-col {
     flex-direction: column;
@@ -733,11 +742,17 @@
   .px-4 {
     padding-inline: calc(var(--spacing) * 4);
   }
+  .px-20 {
+    padding-inline: calc(var(--spacing) * 20);
+  }
   .py-2 {
     padding-block: calc(var(--spacing) * 2);
   }
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
+  }
+  .text-left {
+    text-align: left;
   }
   .font-\[\'sumana\'\] {
     font-family: 'sumana';
@@ -773,6 +788,10 @@
   .text-lg {
     font-size: var(--text-lg);
     line-height: var(--tw-leading, var(--text-lg--line-height));
+  }
+  .text-sm {
+    font-size: var(--text-sm);
+    line-height: var(--tw-leading, var(--text-sm--line-height));
   }
   .text-xl {
     font-size: var(--text-xl);
@@ -812,6 +831,9 @@
   }
   .text-\[\#B1964D\] {
     color: #B1964D;
+  }
+  .text-\[\#d2d2d2\] {
+    color: #d2d2d2;
   }
   .text-white {
     color: var(--color-white);
@@ -858,6 +880,13 @@
     &:hover {
       @media (hover: hover) {
         border-color: var(--color-gray-500);
+      }
+    }
+  }
+  .hover\:bg-\[\#143865\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #143865;
       }
     }
   }
@@ -1020,6 +1049,11 @@
       justify-content: flex-end;
     }
   }
+  .md\:gap-0 {
+    @media (width >= 48rem) {
+      gap: calc(var(--spacing) * 0);
+    }
+  }
   .md\:gap-2 {
     @media (width >= 48rem) {
       gap: calc(var(--spacing) * 2);
@@ -1073,6 +1107,11 @@
   .md\:p-24 {
     @media (width >= 48rem) {
       padding: calc(var(--spacing) * 24);
+    }
+  }
+  .md\:px-10 {
+    @media (width >= 48rem) {
+      padding-inline: calc(var(--spacing) * 10);
     }
   }
   .md\:px-20 {
@@ -1187,9 +1226,44 @@
       grid-column: span 2 / span 2;
     }
   }
+  .lg\:col-span-full {
+    @media (width >= 64rem) {
+      grid-column: 1 / -1;
+    }
+  }
+  .lg\:col-start-1 {
+    @media (width >= 64rem) {
+      grid-column-start: 1;
+    }
+  }
   .lg\:row-span-2 {
     @media (width >= 64rem) {
       grid-row: span 2 / span 2;
+    }
+  }
+  .lg\:row-span-3 {
+    @media (width >= 64rem) {
+      grid-row: span 3 / span 3;
+    }
+  }
+  .lg\:row-start-3 {
+    @media (width >= 64rem) {
+      grid-row-start: 3;
+    }
+  }
+  .lg\:row-start-4 {
+    @media (width >= 64rem) {
+      grid-row-start: 4;
+    }
+  }
+  .lg\:row-start-5 {
+    @media (width >= 64rem) {
+      grid-row-start: 5;
+    }
+  }
+  .lg\:mx-10 {
+    @media (width >= 64rem) {
+      margin-inline: calc(var(--spacing) * 10);
     }
   }
   .lg\:block {
@@ -1207,9 +1281,39 @@
       height: 90%;
     }
   }
+  .lg\:w-\[60vw\] {
+    @media (width >= 64rem) {
+      width: 60vw;
+    }
+  }
+  .lg\:w-\[65vw\] {
+    @media (width >= 64rem) {
+      width: 65vw;
+    }
+  }
+  .lg\:w-\[80vw\] {
+    @media (width >= 64rem) {
+      width: 80vw;
+    }
+  }
   .lg\:w-\[90vw\] {
     @media (width >= 64rem) {
       width: 90vw;
+    }
+  }
+  .lg\:w-\[100vw\] {
+    @media (width >= 64rem) {
+      width: 100vw;
+    }
+  }
+  .lg\:max-w-\[60vh\] {
+    @media (width >= 64rem) {
+      max-width: 60vh;
+    }
+  }
+  .lg\:max-w-\[60vw\] {
+    @media (width >= 64rem) {
+      max-width: 60vw;
     }
   }
   .lg\:-translate-y-\[10\%\] {
@@ -1259,6 +1363,11 @@
       grid-template-rows: repeat(3, minmax(0, 1fr));
     }
   }
+  .lg\:grid-rows-5 {
+    @media (width >= 64rem) {
+      grid-template-rows: repeat(5, minmax(0, 1fr));
+    }
+  }
   .lg\:flex-row {
     @media (width >= 64rem) {
       flex-direction: row;
@@ -1294,6 +1403,11 @@
       background-color: #EDF2F9;
     }
   }
+  .lg\:p-20 {
+    @media (width >= 64rem) {
+      padding: calc(var(--spacing) * 20);
+    }
+  }
   .lg\:px-20 {
     @media (width >= 64rem) {
       padding-inline: calc(var(--spacing) * 20);
@@ -1304,6 +1418,11 @@
       padding-right: calc(var(--spacing) * 0);
     }
   }
+  .lg\:pr-20 {
+    @media (width >= 64rem) {
+      padding-right: calc(var(--spacing) * 20);
+    }
+  }
   .lg\:pl-32 {
     @media (width >= 64rem) {
       padding-left: calc(var(--spacing) * 32);
@@ -1312,6 +1431,11 @@
   .lg\:pl-48 {
     @media (width >= 64rem) {
       padding-left: calc(var(--spacing) * 48);
+    }
+  }
+  .lg\:pl-80 {
+    @media (width >= 64rem) {
+      padding-left: calc(var(--spacing) * 80);
     }
   }
   .lg\:text-2xl {
@@ -1330,6 +1454,18 @@
     @media (width >= 64rem) {
       font-size: var(--text-5xl);
       line-height: var(--tw-leading, var(--text-5xl--line-height));
+    }
+  }
+  .lg\:text-lg {
+    @media (width >= 64rem) {
+      font-size: var(--text-lg);
+      line-height: var(--tw-leading, var(--text-lg--line-height));
+    }
+  }
+  .lg\:text-xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-xl);
+      line-height: var(--tw-leading, var(--text-xl--line-height));
     }
   }
 }
