--- a/output.css
+++ b/output.css
@@ -524,8 +524,14 @@
   .relative {
     position: relative;
   }
+  .-z-10 {
+    z-index: calc(10 * -1);
+  }
   .col-span-2 {
     grid-column: span 2 / span 2;
+  }
+  .col-start-2 {
+    grid-column-start: 2;
   }
   .row-span-2 {
     grid-row: span 2 / span 2;
@@ -584,6 +590,9 @@
   .h-\[95\] {
     height: 95;
   }
+  .h-\[100vh\] {
+    height: 100vh;
+  }
   .w-\[90vh\] {
     width: 90vh;
   }
@@ -593,8 +602,14 @@
   .w-\[95vw\] {
     width: 95vw;
   }
+  .w-\[100vw\] {
+    width: 100vw;
+  }
   .w-full {
     width: 100%;
+  }
+  .w-screen {
+    width: 100vw;
   }
   .border-collapse {
     border-collapse: collapse;
@@ -613,6 +628,9 @@
   }
   .grid-flow-row {
     grid-auto-flow: row;
+  }
+  .grid-rows-2 {
+    grid-template-rows: repeat(2, minmax(0, 1fr));
   }
   .grid-rows-3 {
     grid-template-rows: repeat(3, minmax(0, 1fr));
@@ -706,14 +724,32 @@
   .bg-\[\#0C2340\] {
     background-color: #0C2340;
   }
+  .bg-\[\#1D3A5F\] {
+    background-color: #1D3A5F;
+  }
+  .bg-\[\#2E4D74\] {
+    background-color: #2E4D74;
+  }
   .bg-\[\#D2D2D2\] {
     background-color: #D2D2D2;
   }
   .bg-\[\#E1E8F2\] {
     background-color: #E1E8F2;
   }
+  .bg-\[\#EDF2F9\] {
+    background-color: #EDF2F9;
+  }
   .bg-\[bg-\[\#E1E8F2\]\] {
     background-color: bg-[#E1E8F2];
+  }
+  .bg-blue-50 {
+    background-color: var(--color-blue-50);
+  }
+  .bg-\[url\(\'images\/campus_spring_scenic-1200\.webp\'\)\] {
+    background-image: url('images/campus_spring_scenic-1200.webp');
+  }
+  .bg-cover {
+    background-size: cover;
   }
   .object-cover {
     object-fit: cover;
@@ -751,6 +787,9 @@
   .py-10 {
     padding-block: calc(var(--spacing) * 10);
   }
+  .text-center {
+    text-align: center;
+  }
   .text-left {
     text-align: left;
   }
@@ -784,6 +823,14 @@
   .text-5xl {
     font-size: var(--text-5xl);
     line-height: var(--tw-leading, var(--text-5xl--line-height));
+  }
+  .text-8xl {
+    font-size: var(--text-8xl);
+    line-height: var(--tw-leading, var(--text-8xl--line-height));
+  }
+  .text-9xl {
+    font-size: var(--text-9xl);
+    line-height: var(--tw-leading, var(--text-9xl--line-height));
   }
   .text-lg {
     font-size: var(--text-lg);
@@ -841,6 +888,15 @@
   .underline {
     text-decoration-line: underline;
   }
+  .opacity-70 {
+    opacity: 70%;
+  }
+  .opacity-80 {
+    opacity: 80%;
+  }
+  .opacity-90 {
+    opacity: 90%;
+  }
   .outline {
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
@@ -897,11 +953,23 @@
       }
     }
   }
+  .hover\:bg-\[\#EDF2F9\] {
+    &:hover {
+      @media (hover: hover) {
+        background-color: #EDF2F9;
+      }
+    }
+  }
   .hover\:bg-\[\#F0F0F0\] {
     &:hover {
       @media (hover: hover) {
         background-color: #F0F0F0;
       }
+    }
+  }
+  .md\:z-10 {
+    @media (width >= 48rem) {
+      z-index: 10;
     }
   }
   .md\:col-span-1 {
@@ -929,6 +997,11 @@
       grid-column-start: 2;
     }
   }
+  .md\:row-span-2 {
+    @media (width >= 48rem) {
+      grid-row: span 2 / span 2;
+    }
+  }
   .md\:row-start-1 {
     @media (width >= 48rem) {
       grid-row-start: 1;
@@ -952,6 +1025,16 @@
   .md\:my-20 {
     @media (width >= 48rem) {
       margin-block: calc(var(--spacing) * 20);
+    }
+  }
+  .md\:mt-10 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * 10);
+    }
+  }
+  .md\:mb-10 {
+    @media (width >= 48rem) {
+      margin-bottom: calc(var(--spacing) * 10);
     }
   }
   .md\:grid {
@@ -979,9 +1062,42 @@
       height: 90%;
     }
   }
+  .md\:w-3\/4 {
+    @media (width >= 48rem) {
+      width: calc(3/4 * 100%);
+    }
+  }
+  .md\:w-\[90vw\] {
+    @media (width >= 48rem) {
+      width: 90vw;
+    }
+  }
+  .md\:-translate-y-\[5\%\] {
+    @media (width >= 48rem) {
+      --tw-translate-y: calc(5% * -1);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .md\:-translate-y-\[10\%\] {
+    @media (width >= 48rem) {
+      --tw-translate-y: calc(10% * -1);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .md\:translate-y-\[10\%\] {
+    @media (width >= 48rem) {
+      --tw-translate-y: 10%;
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
   .md\:grid-flow-col {
     @media (width >= 48rem) {
       grid-auto-flow: column;
+    }
+  }
+  .md\:grid-flow-col-dense {
+    @media (width >= 48rem) {
+      grid-auto-flow: column dense;
     }
   }
   .md\:grid-flow-row {
@@ -1139,6 +1255,11 @@
       text-align: end;
     }
   }
+  .md\:text-right {
+    @media (width >= 48rem) {
+      text-align: right;
+    }
+  }
   .md\:text-2xl {
     @media (width >= 48rem) {
       font-size: var(--text-2xl);
@@ -1236,6 +1357,11 @@
       grid-column-start: 1;
     }
   }
+  .lg\:col-start-3 {
+    @media (width >= 64rem) {
+      grid-column-start: 3;
+    }
+  }
   .lg\:row-span-2 {
     @media (width >= 64rem) {
       grid-row: span 2 / span 2;
@@ -1266,6 +1392,21 @@
       margin-inline: calc(var(--spacing) * 10);
     }
   }
+  .lg\:mt-10 {
+    @media (width >= 64rem) {
+      margin-top: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:mb-10 {
+    @media (width >= 64rem) {
+      margin-bottom: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:mb-20 {
+    @media (width >= 64rem) {
+      margin-bottom: calc(var(--spacing) * 20);
+    }
+  }
   .lg\:block {
     @media (width >= 64rem) {
       display: block;
@@ -1289,6 +1430,11 @@
   .lg\:w-\[65vw\] {
     @media (width >= 64rem) {
       width: 65vw;
+    }
+  }
+  .lg\:w-\[70vw\] {
+    @media (width >= 64rem) {
+      width: 70vw;
     }
   }
   .lg\:w-\[80vw\] {
@@ -1319,6 +1465,12 @@
   .lg\:-translate-y-\[10\%\] {
     @media (width >= 64rem) {
       --tw-translate-y: calc(10% * -1);
+      translate: var(--tw-translate-x) var(--tw-translate-y);
+    }
+  }
+  .lg\:translate-y-\[5\%\] {
+    @media (width >= 64rem) {
+      --tw-translate-y: 5%;
       translate: var(--tw-translate-x) var(--tw-translate-y);
     }
   }
@@ -1358,6 +1510,11 @@
       grid-template-rows: repeat(1, minmax(0, 1fr));
     }
   }
+  .lg\:grid-rows-2 {
+    @media (width >= 64rem) {
+      grid-template-rows: repeat(2, minmax(0, 1fr));
+    }
+  }
   .lg\:grid-rows-3 {
     @media (width >= 64rem) {
       grid-template-rows: repeat(3, minmax(0, 1fr));
@@ -1393,6 +1550,11 @@
       gap: calc(var(--spacing) * 5);
     }
   }
+  .lg\:gap-10 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 10);
+    }
+  }
   .lg\:place-self-end {
     @media (width >= 64rem) {
       place-self: end;
@@ -1401,6 +1563,11 @@
   .lg\:bg-\[\#EDF2F9\] {
     @media (width >= 64rem) {
       background-color: #EDF2F9;
+    }
+  }
+  .lg\:p-10 {
+    @media (width >= 64rem) {
+      padding: calc(var(--spacing) * 10);
     }
   }
   .lg\:p-20 {
@@ -1454,6 +1621,24 @@
     @media (width >= 64rem) {
       font-size: var(--text-5xl);
       line-height: var(--tw-leading, var(--text-5xl--line-height));
+    }
+  }
+  .lg\:text-7xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-7xl);
+      line-height: var(--tw-leading, var(--text-7xl--line-height));
+    }
+  }
+  .lg\:text-8xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-8xl);
+      line-height: var(--tw-leading, var(--text-8xl--line-height));
+    }
+  }
+  .lg\:text-9xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-9xl);
+      line-height: var(--tw-leading, var(--text-9xl--line-height));
     }
   }
   .lg\:text-lg {
